[package]
name = "manual_schema_and_mappings"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Taryn Hill <taryn@phrohdoh.com>", "Sebastian Geisler <sgeisler@wh2.tu-dresden.de>"]

[dependencies]
diesel = { version = "0.15.0", features = ["sqlite"] }
diesel_codegen = { version = "0.15.0", features = ["sqlite"] }
dotenv = "0.8"
